# chess

./: .gitignore  README.md  analyze_all_games.py  app.py  game_analyzer.py  lichess_games.py  pgn_to_gif.py  pyproject.toml
templates/: base.html  cached_analyses.html  chessboard_component.html  error.html  game_analysis.html  game_detail.html  games_list.html  stats.html
