[project]
name = "chess"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chess",
    "imageio>=2.37.0",
    "pillow>=11.3.0",
    "python-chess>=1.2.0",
    "requests>=2.32.5",
]

[tool.uv.sources]
chess = { workspace = true }
